# travelagent3

./: .env.example  .gitignore  CI_CD.md  docker-compose.yml  package-lock.json  start.sh  stop.sh  技术方案审查报告_与v4对比.md  旅行Agent系统技术方案.md  旅行Agent系统技术方案_v2.md  旅行Agent系统技术方案_v2_副本.md  旅行Agent系统技术方案_v3_LangGraph编排层.md  旅行Agent系统设计文档_v2.md  旅行Agent系统设计文档_v3.md  旅行Agent系统设计文档_v4.md  项目修复日志_2026-04-29.md  项目含金量与面试评估报告.md
backend/: Dockerfile  pyproject.toml
backend/src/: __init__.py  models.py  schemas.py
backend/src/agents/: __init__.py  context_enrichment.py  information_collection.py  intent_recognition.py  itinerary_planner.py  map_route.py  memory_management.py  preference_budget.py  proposal_generation.py  qa_agent.py  realtime_query.py  validation.py
backend/src/api/: dependencies.py  main.py  routes.py  websocket.py
backend/src/core/: checkpointer.py  database.py  input_guard.py  llm_client.py  redis_client.py  settings.py  state.py  thought_logger.py
backend/src/graph/: __init__.py  graph.py  nodes.py
backend/src/models/: __init__.py  planning_job.py
backend/src/pipeline/: planning_pipeline.py
backend/src/repositories/: planning_job.py
backend/src/skills/: __init__.py  memory_retrieve.py  memory_store.py  poi_search.py  price_query.py  route_calculation.py  tavily_search.py  weather_query.py  web_crawler.py  web_search.py
backend/src/travel_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/worker/: planning_worker.py
backend/tests/: conftest.py  test_date_resolution.py  test_poi_matching.py  test_validation.py
(+126 files in other folders)
